--- a/services/dialog_ui/dialog_selector/js/pages/index/index.css
+++ b/services/dialog_ui/dialog_selector/js/pages/index/index.css
@@ -62,6 +62,7 @@
     border-radius: 8vp;
     align-self: center;
 }
+
 .AppName {
     width: 58vp;
     font-size: 12vp;
@@ -70,6 +71,7 @@
     align-self: center;
     text-overflow: ellipsis;
 }
+
 .but {
     text-align: center;
     justify-content: center;
@@ -89,40 +91,35 @@
     font-weight: regular;
 }
 
+.selector-list {
+    margin-left: 10vp;
+    margin-right: 10vp;
+    background-color: white;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .selector-listback {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-color: #ffffff;
-}
-
-.selector-list {
-    scrollbar-width: 2vp;
-    margin-left: 10vp;
-    margin-right: 10vp;
-    background-color: #ffffff;
+    background-color: #00000000;
 }
 
 .selector-listItem {
     width: 90%;
     height: 68vp;
-    margin-top: 1vp;
-    margin-bottom: 1vp;
-    background-color: #ffffff;
-}
-
-.selector-listItemNode {
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    border-bottom: 1vp;
+    background-color: white;
+    border-bottom: 2vp;
     border-bottom-color: #fafafa;
 }
 
 .selector-listItemAppIcon {
     height: 48vp;
     width: 48vp;
-    margin: 8vp;
+    margin: 4vp;
     border-radius: 8vp;
     align-self: center;
 }
@@ -141,11 +138,11 @@
     width: 100%;
     height: 50vp;
     justify-content: center;
-    background-color: #ffffff;
+    background-color: white;
 }
 
 .selector-btnCancel {
-    width: 80%;
+    width: 75%;
     height: 40vp;
     font-size: 16fp;
     margin-bottom: 10vp;
