dialog rounded corner modification
Signed-off-by: xuchenghua09 <xuchenghua09@huawei.com>

--- a/services/dialog_ui/dialog_selector/js/pages/index/index.css
+++ b/services/dialog_ui/dialog_selector/js/pages/index/index.css
@@ -139,6 +139,7 @@
     height: 50vp;
     justify-content: center;
     background-color: white;
+    border-radius: 24vp;
 }
 
 .selector-btnCancel {
